[tool.poetry]
name = "vote_distribution_bots"
version = "0.1.0"
description = "Query APR for pools and curve"
authors = []
readme = "README.md"
packages = [{ include = "get_vote" }]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.31.0"

[tool.poetry.group.dev.dependencies]
mypy = "^1.3.0"
types-requests = "^2.31.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
